// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button tag Matches earlier configuration 1`] = `
.daTykl {
  -webkit-transition: background 100ms linear;
  transition: background 100ms linear;
  color: white;
  border: 0;
  font-family: inherit;
  font-weight: inherit;
  font-size: inherit;
  line-height: inherit;
  padding: 0.5rem 1rem;
  background-color: hsl(161,97%,38%);
}

.daTykl:hover {
  background-color: hsl(161,97%,33%);
  border: 0;
}

.daTykl:disabled {
  background-color: hsl(161,57%,33%);
  border: 0;
}

.daTykl:not(:disabled) {
  cursor: pointer;
}

<button
  className="Button__Button-jkHDFw daTykl"
/>
`;

exports[`Button tag Matches earlier configuration if alternative and disabled prop is true 1`] = `
.drtJCo {
  -webkit-transition: background 100ms linear;
  transition: background 100ms linear;
  color: white;
  border: 0;
  font-family: inherit;
  font-weight: inherit;
  font-size: inherit;
  line-height: inherit;
  padding: 0.5rem 1rem;
  background-color: hsl(289,65%,52%);
}

.drtJCo:hover {
  background-color: hsl(289,65%,47%);
  border: 0;
}

.drtJCo:disabled {
  background-color: hsl(289,25%,47%);
  border: 0;
}

.drtJCo:not(:disabled) {
  cursor: pointer;
}

<button
  className="Button__Button-jkHDFw drtJCo"
  disabled={true}
/>
`;

exports[`Button tag Matches earlier configuration if alternative and outlined prop is true 1`] = `
.fvfpcJ {
  -webkit-transition: background 100ms linear;
  transition: background 100ms linear;
  color: inherit;
  border: 3px solid hsl(289,65%,52%);
  font-family: inherit;
  font-weight: inherit;
  font-size: inherit;
  line-height: inherit;
  padding: calc(0.5rem - 3px) calc(1rem - 3px);
  background-color: transparent;
}

.fvfpcJ:hover {
  background-color: transparent;
  border: 3px solid hsl(289,65%,47%);
}

.fvfpcJ:disabled {
  background-color: transparent;
  border: 3px solid hsl(289,25%,47%);
}

.fvfpcJ:not(:disabled) {
  cursor: pointer;
}

<button
  className="Button__Button-jkHDFw fvfpcJ"
/>
`;

exports[`Button tag Matches earlier configuration if alternative is true 1`] = `
.drtJCo {
  -webkit-transition: background 100ms linear;
  transition: background 100ms linear;
  color: white;
  border: 0;
  font-family: inherit;
  font-weight: inherit;
  font-size: inherit;
  line-height: inherit;
  padding: 0.5rem 1rem;
  background-color: hsl(289,65%,52%);
}

.drtJCo:hover {
  background-color: hsl(289,65%,47%);
  border: 0;
}

.drtJCo:disabled {
  background-color: hsl(289,25%,47%);
  border: 0;
}

.drtJCo:not(:disabled) {
  cursor: pointer;
}

<button
  className="Button__Button-jkHDFw drtJCo"
/>
`;

exports[`Button tag Matches earlier configuration if alternative, disabled and outlined prop is true 1`] = `
.fvfpcJ {
  -webkit-transition: background 100ms linear;
  transition: background 100ms linear;
  color: inherit;
  border: 3px solid hsl(289,65%,52%);
  font-family: inherit;
  font-weight: inherit;
  font-size: inherit;
  line-height: inherit;
  padding: calc(0.5rem - 3px) calc(1rem - 3px);
  background-color: transparent;
}

.fvfpcJ:hover {
  background-color: transparent;
  border: 3px solid hsl(289,65%,47%);
}

.fvfpcJ:disabled {
  background-color: transparent;
  border: 3px solid hsl(289,25%,47%);
}

.fvfpcJ:not(:disabled) {
  cursor: pointer;
}

<button
  className="Button__Button-jkHDFw fvfpcJ"
  disabled={true}
/>
`;

exports[`Button tag Matches earlier configuration if disabled prop is true 1`] = `
.daTykl {
  -webkit-transition: background 100ms linear;
  transition: background 100ms linear;
  color: white;
  border: 0;
  font-family: inherit;
  font-weight: inherit;
  font-size: inherit;
  line-height: inherit;
  padding: 0.5rem 1rem;
  background-color: hsl(161,97%,38%);
}

.daTykl:hover {
  background-color: hsl(161,97%,33%);
  border: 0;
}

.daTykl:disabled {
  background-color: hsl(161,57%,33%);
  border: 0;
}

.daTykl:not(:disabled) {
  cursor: pointer;
}

<button
  className="Button__Button-jkHDFw daTykl"
  disabled={true}
/>
`;

exports[`Button tag Matches earlier configuration if outlined is true 1`] = `
.hBOGma {
  -webkit-transition: background 100ms linear;
  transition: background 100ms linear;
  color: inherit;
  border: 3px solid hsl(161,97%,38%);
  font-family: inherit;
  font-weight: inherit;
  font-size: inherit;
  line-height: inherit;
  padding: calc(0.5rem - 3px) calc(1rem - 3px);
  background-color: transparent;
}

.hBOGma:hover {
  background-color: transparent;
  border: 3px solid hsl(161,97%,33%);
}

.hBOGma:disabled {
  background-color: transparent;
  border: 3px solid hsl(161,57%,33%);
}

.hBOGma:not(:disabled) {
  cursor: pointer;
}

<button
  className="Button__Button-jkHDFw hBOGma"
/>
`;
